--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
+    "@types/node": "^20.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
