--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.0",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/node": "^20.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
