--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "styled-components": "^5.3.10"
+    "react-router-dom": "^6.15.0",
+    "simple-zustand-devtools": "^1.1.0",
+    "styled-components": "^5.3.10",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
-    "@types/node": "^20.5.1",
+    "@types/node": "^20.5.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
